EVA-98 Fix: Se soluciona el problema con el desbordamiento de comentarios en el detalle del historial de documentos.

--- a/SGI/templates/SGI/documentos/resultado-busqueda-documentos.html
+++ b/SGI/templates/SGI/documentos/resultado-busqueda-documentos.html
@@ -135,7 +135,7 @@
                                                                                                                                     <small class="mt-0 mb-1 text-muted">
                                                                                                                                         <b>Estado: </b> {{ res.estado }}
                                                                                                                                     </small>
-                                                                                                                                    <small class="mt-0 mb-1 text-muted">
+                                                                                                                                    <small class="mt-0 mb-1 text-muted" style="overflow: hidden">
                                                                                                                                         <b>Comentarios: </b> {{ res.comentario }}
                                                                                                                                     </small>
                                                                                                                                 </h5>
