EVA-99 Feat: Se edita el template index de contratos 1. Se quitan las columnas de periodicidad de informes y empresa 2. Se corrige el nombre de la columna "Tiempo"

--- a/Proyectos/templates/Proyectos/Contrato/index.html
+++ b/Proyectos/templates/Proyectos/Contrato/index.html
@@ -46,10 +46,8 @@
                                                             <th>Fecha de inicio</th>
                                                             <th>Fecha de terminación</th>
                                                             <th>Valor</th>
-                                                            <th>Periodicidad de informes</th>
-                                                            <th>Tiempo</th>
+                                                            <th>Tiempo de ejecucición</th>
                                                             <th>Tipo de contrato</th>
-                                                            <th>Empresa</th>
                                                             {% if perms.Proyectos.change_contrato or perms.Proyectos.delete_contrato %}
                                                                 <th>Acción</th>
                                                             {% endif %}
@@ -68,10 +66,8 @@
                                                                 <td>{{ contrato.fecha_inicio|date:'Y-m-d' }}</td>
                                                                 <td>{{ contrato.fecha_terminacion|date:'Y-m-d' }}</td>
                                                                 <td>{{ contrato.valor }}</td>
-                                                                <td>{{ contrato.periodicidad_informes }}</td>
                                                                 <td>{{ contrato.tiempo }}</td>
                                                                 <td>{{ contrato.tipo_contrato }}</td>
-                                                                <td>{{ contrato.empresa }}</td>
                                                                 {% if perms.Proyectos.change_contrato or perms.Proyectos.delete_contrato %}
                                                                 <td>
                                                                     {% if perms.Proyectos.change_contrato %}
