EVA-99 Feat: Se agrega la fecha de suscripción al index de contratos.

--- a/Proyectos/templates/Proyectos/Contrato/index.html
+++ b/Proyectos/templates/Proyectos/Contrato/index.html
@@ -43,6 +43,7 @@
                                                             <th>Teléfono del supervisor</th>
                                                             <th>Correo del supervisor</th>
                                                             <th>Nombre del residente</th>
+                                                            <th>Fecha de suscripción</th>
                                                             <th>Fecha de inicio</th>
                                                             <th>Fecha de terminación</th>
                                                             <th>Valor</th>
@@ -63,6 +64,7 @@
                                                                 <td>{{ contrato.supervisor_telefono }}</td>
                                                                 <td>{{ contrato.supervisor_correo }}</td>
                                                                 <td>{{ contrato.residente }}</td>
+                                                                <td>{{ contrato.fecha_suscripcion|date:'Y-m-d' }}</td>
                                                                 <td>{{ contrato.fecha_inicio|date:'Y-m-d' }}</td>
                                                                 <td>{{ contrato.fecha_terminacion|date:'Y-m-d' }}</td>
                                                                 <td>{{ contrato.valor }}</td>
