EVA-100 Fix: Se corrige el error que mostraba el nombre de usuario en el codigo del consecutivo de oficio.

--- a/GestionDocumental/templates/GestionDocumental/ConsecutivoOficios/index.html
+++ b/GestionDocumental/templates/GestionDocumental/ConsecutivoOficios/index.html
@@ -56,7 +56,7 @@
                                                 <tbody>
                                                     {% for consecutivo in consecutivos %}
                                                         <tr {% if consecutivo == consecutivos.last and id_filtro == 1 and consecutivo.usuario == request.user %}style="background: #fffaee;"{% endif %}>
-                                                            <td>{{ consecutivo.codigo}} {{  request.user }}</td>
+                                                            <td>{{ consecutivo.codigo}}</td>
                                                             <td>{{ consecutivo.fecha | date:'Y-m-d H:m'}}</td>
                                                             <td>{% if consecutivo.contrato %}
                                                                     {{ consecutivo.contrato}} - {{ consecutivo.contrato.cliente }}
