--- a/SGI/templates/SGI/documentos/index.html
+++ b/SGI/templates/SGI/documentos/index.html
@@ -57,16 +57,20 @@
                                                                                         {% if perms.TalentoHumano.view_historial %}
                                                                                         <a class="far fa-custom fa-list-alt p-l-10" {% for hst in historial %}{% if hst.documento == documento %} id="hst_{{ documento.id }}" href="javascript:arbolDocumentos('doc_{{ documento.id }}', 'hst_{{ documento.id }}')" data-original-title="Historial"{% endif %}{% endfor %} data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title=""></a>
                                                                                         {% endif %}
-                                                                                        {% if grupo_documento.solo_proceso == True and grupo_documento.proceso == colaborador.proceso or perms.TalentoHumano.can_gestioncompletasgi or grupo_documento.solo_proceso == False and proceso == colaborador.proceso %}
-                                                                                            {% if perms.SGI.add_archivo %}
-                                                                                            <a class="far fa-custom fa-long-arrow-alt-up p-l-10" href="javascript:abrir_modal_cargar('{% url 'sgi:documentos-cargar' proceso.id  grupo_documento.id documento.id %}');" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Cargar"></a>
-                                                                                            {% endif %}
-                                                                                            {% if perms.SGI.change_documento %}
-                                                                                            <a class="far fa-custom fa-edit p-l-10" href="{% url 'sgi:documentos-editar' proceso.id  grupo_documento.id documento.id %}" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Editar"></a>
-                                                                                            {% endif %}
-                                                                                            {% if perms.SGI.delete_documento %}
-                                                                                            <a class="far fa-custom fa-trash-alt color-danger-900 p-l-10" id="eliminar_{{ documento.id }}" href="javascript:void(0);"  onclick="fConfirmarEliminar({{ documento.id }})" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Eliminar"></a>
-                                                                                            {% endif %}
+                                                                                        {% if grupo_documento.solo_proceso == True  or perms.TalentoHumano.can_gestioncompletasgi or grupo_documento.solo_proceso == False and proceso == colaborador.proceso %}
+                                                                                            {% for pro in grupo_documento.proceso %}
+                                                                                                {% if pro == colaborador.proceso %}
+                                                                                                    {% if perms.SGI.add_archivo %}
+                                                                                                    <a class="far fa-custom fa-long-arrow-alt-up p-l-10" href="javascript:abrir_modal_cargar('{% url 'sgi:documentos-cargar' proceso.id  grupo_documento.id documento.id %}');" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Cargar"></a>
+                                                                                                    {% endif %}
+                                                                                                    {% if perms.SGI.change_documento %}
+                                                                                                    <a class="far fa-custom fa-edit p-l-10" href="{% url 'sgi:documentos-editar' proceso.id  grupo_documento.id documento.id %}" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Editar"></a>
+                                                                                                    {% endif %}
+                                                                                                    {% if perms.SGI.delete_documento %}
+                                                                                                    <a class="far fa-custom fa-trash-alt color-danger-900 p-l-10" id="eliminar_{{ documento.id }}" href="javascript:void(0);"  onclick="fConfirmarEliminar({{ documento.id }})" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Eliminar"></a>
+                                                                                                    {% endif %}
+                                                                                                {% endif %}
+                                                                                            {% endfor %}
                                                                                         {% endif %}
                                                                                     </div>
                                                                                 </div>
