--- a/SGI/templates/SGI/documentos/index.html
+++ b/SGI/templates/SGI/documentos/index.html
@@ -60,20 +60,19 @@
                                                                                         {% if perms.SGI.view_cadenaaprobacionencabezado %}
                                                                                         <a class="far fa-custom fa-link p-l-10" id="cadena_{{ documento.id }}" {% if documento.cadena_aprobacion %}href="javascript:abrir_modal_detalle_cadena_aprobacion('{% url 'sgi:cadenas-aprobacion-detalle' 1 %}')" {% endif %} data-original-title="Ver Cadena de Aprobación" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title=""></a>
                                                                                         {% endif %}
-                                                                                        {% if grupo_documento.solo_proceso == True  or perms.TalentoHumano.can_gestioncompletasgi or grupo_documento.solo_proceso == False and proceso == colaborador.proceso %}
-                                                                                            {% for pro in grupo_documento.proceso %}
-                                                                                                {% if pro == colaborador.proceso %}
-                                                                                                    {% if perms.SGI.add_archivo %}
-                                                                                                    <a class="far fa-custom fa-long-arrow-alt-up p-l-10" href="javascript:abrir_modal_cargar('{% url 'sgi:documentos-cargar' proceso.id  grupo_documento.id documento.id %}');" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Cargar"></a>
+                                                                                        {% if grupo_documento.solo_proceso or perms.TalentoHumano.can_gestioncompletasgi or not grupo_documento.solo_proceso and proceso == colaborador.proceso %}
+                                                                                            {% if not perms.TalentoHumano.can_gestioncompletasgi %}
+                                                                                                {% for pro in grupo_documento.proceso %}
+                                                                                                    {% if pro == colaborador.proceso %}
+                                                                                                        {% include 'SGI/documentos/botonesGestionSGI.html' %}
                                                                                                     {% endif %}
-                                                                                                    {% if perms.SGI.change_documento %}
-                                                                                                    <a class="far fa-custom fa-edit p-l-10" href="{% url 'sgi:documentos-editar' proceso.id  grupo_documento.id documento.id %}" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Editar"></a>
-                                                                                                    {% endif %}
-                                                                                                    {% if perms.SGI.delete_documento %}
-                                                                                                    <a class="far fa-custom fa-trash-alt color-danger-900 p-l-10" id="eliminar_{{ documento.id }}" href="javascript:void(0);"  onclick="fConfirmarEliminar({{ documento.id }})" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Eliminar"></a>
-                                                                                                    {% endif %}
-                                                                                                {% endif %}
-                                                                                            {% endfor %}
+                                                                                                {% endfor %}
+                                                                                            {% else %}
+                                                                                                {% include 'SGI/documentos/botonesGestionSGI.html' %}
+                                                                                            {% endif %}
+                                                                                            {% if not grupo_documento.solo_proceso and proceso == colaborador.proceso and not perms.TalentoHumano.can_gestioncompletasgi %}
+                                                                                                {% include 'SGI/documentos/botonesGestionSGI.html' %}
+                                                                                            {% endif %}
                                                                                         {% endif %}
                                                                                     </div>
                                                                                 </div>
@@ -94,18 +93,26 @@
                                                                                             <div class="panel-container show w-500">
                                                                                                 <div class="panel-content">
                                                                                                      <div class="row">
-                                                                                                        <div class="col-md-10">
+                                                                                                        <div class="col-md-9">
                                                                                                              {{ hst.nombre_documento }} <span class="{% if hst.estado.id == estado.APROBADO %}badge badge-primary {% elif hst.estado.id == estado.RECHAZADO %} badge border border-danger text-danger {% else %} badge border border-primary text-primary {% endif %}" style="font-size: 70%">{{ hst.estado }}</span>
                                                                                                         </div>
-                                                                                                        <div class="col-md-2 p-r-10" style="text-align: end">
-                                                                                                            {% if grupo_documento.solo_proceso == True and grupo_documento.proceso == colaborador.proceso or perms.TalentoHumano.can_gestioncompletasgi or grupo_documento.solo_proceso == False and proceso == colaborador.proceso %}
-                                                                                                                {% if perms.TalentoHumano.view_archivo_historial %}
-                                                                                                                <a class="far fa-custom fa-eye p-l-10" style="text-decoration: none !important;" href="{% url 'sgi:documentos-ver' hst.id  %}" target="_blank" data-original-title="Ver" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title=""></a>
+                                                                                                        <div class="col-md-3 p-r-10" style="text-align: end">
+                                                                                                           {% if grupo_documento.solo_proceso or perms.TalentoHumano.can_gestioncompletasgi or not grupo_documento.solo_proceso and proceso == colaborador.proceso %}
+                                                                                                                {% if not perms.TalentoHumano.can_gestioncompletasgi %}
+                                                                                                                    {% for pro in grupo_documento.proceso %}
+                                                                                                                        {% if pro == colaborador.proceso %}
+                                                                                                                            {% include 'SGI/documentos/botonesArchivoEliminar.html' %}
+                                                                                                                        {% endif %}
+                                                                                                                    {% endfor %}
+                                                                                                                {% else %}
+                                                                                                                    {% include 'SGI/documentos/botonesArchivoEliminar.html' %}
                                                                                                                 {% endif %}
-                                                                                                            {% endif %}
+                                                                                                                {% if not grupo_documento.solo_proceso and proceso == colaborador.proceso and not perms.TalentoHumano.can_gestioncompletasgi %}
+                                                                                                                    {% include 'SGI/documentos/botonesArchivoEliminar.html' %}
+                                                                                                                {% endif %}
+                                                                                                           {% endif %}
                                                                                                             <a class="far fa-custom fa-caret-square-down p-l-10" id="det_{{ hst.id }}" href="javascript:arbolDocumentos('arc_{{ hst.id }}', 'det_{{ hst.id }}')" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Detalles"></a>
                                                                                                         </div>
-
                                                                                                      </div>
                                                                                                 </div>
                                                                                             </div>
@@ -183,7 +190,7 @@
     <div class="modal fade" tabindex="-1" id="cargar" role="dialog"></div>
     <div class="modal fade" tabindex="-1" id="detalle_cadena_aprobacion" role="dialog"></div>
 
-    {% include 'Administracion/_elements/_modal_confirmar_eliminar.html' with objeto='sgi/documentos' %}
+    {% include 'Administracion/_elements/_modal_confirmar_eliminar.html' %}
 {% endblock main%}
 
 {% block scripts %}
