--- a/SGI/templates/SGI/documentos/index.html
+++ b/SGI/templates/SGI/documentos/index.html
@@ -34,9 +34,21 @@
                                     {% for grupo_documento in grupo_documentos %}
                                         <li>
                                             <span class="col-md-4"><i class="fa fa-lg fa-file-alt"></i> {{ grupo_documento.nombre }}</span>
-                                            {% if perms.SGI.add_documento %}
-                                            <a class="far fa-custom fa-file-plus p-l-10" href="{% url 'SGI:documentos-crear' proceso.id  grupo_documento.id%}" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Crear documento"></a>
+                                            {% if grupo_documento.solo_proceso or perms.TalentoHumano.can_gestioncompletasgi or not grupo_documento.solo_proceso and proceso == colaborador.proceso %}
+                                                {% if not perms.TalentoHumano.can_gestioncompletasgi %}
+                                                    {% for pro in grupo_documento.proceso %}
+                                                        {% if pro == colaborador.proceso %}
+                                                            {% include 'SGI/documentos/BotonesGestion/botonCrearDocumento.html' %}
+                                                        {% endif %}
+                                                    {% endfor %}
+                                                {% else %}
+                                                    {% include 'SGI/documentos/BotonesGestion/botonCrearDocumento.html' %}
+                                                {% endif %}
+                                                {% if not grupo_documento.solo_proceso and proceso == colaborador.proceso and not perms.TalentoHumano.can_gestioncompletasgi %}
+                                                    {% include 'SGI/documentos/BotonesGestion/botonCrearDocumento.html' %}
+                                                {% endif %}
                                             {% endif %}
+
                                             <ul>
                                                 {% for documento in documentos %}
                                                     {% if documento.grupo_documento_id == grupo_documento.id %}
@@ -64,14 +76,14 @@
                                                                                             {% if not perms.TalentoHumano.can_gestioncompletasgi %}
                                                                                                 {% for pro in grupo_documento.proceso %}
                                                                                                     {% if pro == colaborador.proceso %}
-                                                                                                        {% include 'SGI/documentos/botonesGestionSGI.html' %}
+                                                                                                        {% include 'SGI/documentos/BotonesGestion/botonesGestionSGI.html' %}
                                                                                                     {% endif %}
                                                                                                 {% endfor %}
                                                                                             {% else %}
-                                                                                                {% include 'SGI/documentos/botonesGestionSGI.html' %}
+                                                                                                {% include 'SGI/documentos/BotonesGestion/botonesGestionSGI.html' %}
                                                                                             {% endif %}
                                                                                             {% if not grupo_documento.solo_proceso and proceso == colaborador.proceso and not perms.TalentoHumano.can_gestioncompletasgi %}
-                                                                                                {% include 'SGI/documentos/botonesGestionSGI.html' %}
+                                                                                                {% include 'SGI/documentos/BotonesGestion/botonesGestionSGI.html' %}
                                                                                             {% endif %}
                                                                                         {% endif %}
                                                                                     </div>
@@ -101,14 +113,14 @@
                                                                                                                 {% if not perms.TalentoHumano.can_gestioncompletasgi %}
                                                                                                                     {% for pro in grupo_documento.proceso %}
                                                                                                                         {% if pro == colaborador.proceso %}
-                                                                                                                            {% include 'SGI/documentos/botonesArchivoEliminar.html' %}
+                                                                                                                            {% include 'SGI/documentos/BotonesGestion/botonesArchivoEliminar.html' %}
                                                                                                                         {% endif %}
                                                                                                                     {% endfor %}
                                                                                                                 {% else %}
-                                                                                                                    {% include 'SGI/documentos/botonesArchivoEliminar.html' %}
+                                                                                                                    {% include 'SGI/documentos/BotonesGestion/botonesArchivoEliminar.html' %}
                                                                                                                 {% endif %}
                                                                                                                 {% if not grupo_documento.solo_proceso and proceso == colaborador.proceso and not perms.TalentoHumano.can_gestioncompletasgi %}
-                                                                                                                    {% include 'SGI/documentos/botonesArchivoEliminar.html' %}
+                                                                                                                    {% include 'SGI/documentos/BotonesGestion/botonesArchivoEliminar.html' %}
                                                                                                                 {% endif %}
                                                                                                            {% endif %}
                                                                                                             <a class="far fa-custom fa-caret-square-down p-l-10" id="det_{{ hst.id }}" href="javascript:arbolDocumentos('arc_{{ hst.id }}', 'det_{{ hst.id }}')" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Detalles"></a>
