--- a/TalentoHumano/templates/TalentoHumano/GestionPermisos/asignacion_permisos.html
+++ b/TalentoHumano/templates/TalentoHumano/GestionPermisos/asignacion_permisos.html
@@ -27,6 +27,7 @@
                         <input id="datos_permisos" name="datos_permisos" value="{{ datos_permisos }}" style="display: none">
                         <input id="valores_permisos" name="valores_permisos" style="display: none">
                         <input id="id_usuario" value="{{ usuario.id }}" style="display: none">
+                        <button id="btn_enviar" type="submit" style="display: none"></button>
                     </form>
                     <div class="panel-hdr">
                         <small>
