--- a/SGI/templates/SGI/documentos/crear-editar.html
+++ b/SGI/templates/SGI/documentos/crear-editar.html
@@ -36,10 +36,10 @@
                                     <div class="form-group">
                                         <div class="form-row">
                                             <div class="col-md-6">
-                                                {% input_text_tag 'nombre' 'Nombre' placeholder="Ingrese el nombre" required="" maxlength="100" value=documento.nombre mensaje_validacion='Por favor digite el nombre' invalido=errores.nombre onkeypress="return validarCE(event)" %}
+                                                {% input_text_tag 'nombre' 'Nombre' placeholder="Ingrese el nombre" required="" maxlength="100" value=documento.nombre mensaje_validacion='Por favor digite el nombre' invalido=errores.nombre onkeypress="return validarCaracteresPermitidos(event)" %}
                                             </div>
                                             <div class="col-md-6">
-                                                {% input_text_tag 'codigo' 'Código' placeholder="Ingrese el código" required="" maxlength="100" value=documento.codigo mensaje_validacion='Por favor digite el código' invalido=errores.codigo onkeypress="return validarCE(event)" %}
+                                                {% input_text_tag 'codigo' 'Código' placeholder="Ingrese el código" required="" maxlength="100" value=documento.codigo mensaje_validacion='Por favor digite el código' invalido=errores.codigo onkeypress="return validarCaracteresPermitidos(event)" %}
                                             </div>
                                         </div>
                                     </div>
