EVA-102 Fix: Se soluciona el error que impedia que el botón de busqueda funcionara todas las veces. El problema se debia a la carga de la funcion del js, pues no se cargaba y por eso no funcionaba a la primera Se agregó el llamado del form y el submit desde el onclic del botón.

--- a/SGI/templates/SGI/_common/menu_aplicacion.html
+++ b/SGI/templates/SGI/_common/menu_aplicacion.html
@@ -13,7 +13,7 @@
                             <div class="input-group">
                                 <input type="search" class="form-control form-control-md shadow-inset-2" placeholder="Buscar" name="texto_busqueda" id="texto_busqueda" value="{{ texto_busqueda }}">
                                 <div class="input-group-append">
-                                    <div class="input-group-text" id="id_buscar">
+                                    <div class="input-group-text" id="id_buscar" onclick="$('#form_busqueda').submit()">
                                         <i class="fal fa-search fs-xl" ></i>
                                     </div>
                                 </div>
