--- a/SGI/templates/SGI/documentos/resultado-busqueda-documentos.html
+++ b/SGI/templates/SGI/documentos/resultado-busqueda-documentos.html
@@ -59,7 +59,7 @@
                                                                                                         <a class="far fa-custom fa-list-alt p-l-10" {% for hst in historial %}{% if hst.documento == doc.documento %} id="hst_{{ doc.documento.id }}" href="javascript:arbolDocumentos('doc_{{ doc.documento.id }}', 'hst_{{ doc.documento.id }}')" data-original-title="Historial"{% endif %}{% endfor %} data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title=""></a>
                                                                                                         {% endif %}
                                                                                                         {% if perms.SGI.view_cadenaaprobacionencabezado %}
-                                                                                                        <a class="far fa-custom fa-link p-l-10" id="cadena_{{ documento.id }}" {% if doc.documento.cadena_aprobacion %}href="javascript:abrirModalDetalleCadenaAprobacion('{% url 'sgi:cadenas-aprobacion-detalle' doc.documento.cadena_aprobacion_id %}')" {% endif %} data-original-title="Ver Cadena de Aprobación" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title=""></a>
+                                                                                                        <a class="far fa-custom fa-link p-l-10" id="cadena_{{ doc.documento.id }}" {% if doc.documento.cadena_aprobacion %}href="javascript:abrirModalDetalleCadenaAprobacion('{% url 'sgi:cadenas-aprobacion-detalle' doc.documento.cadena_aprobacion_id %}')" {% endif %} data-original-title="Ver Cadena de Aprobación" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title=""></a>
                                                                                                         {% endif %}
                                                                                                         {% if gru.solo_proceso or perms.TalentoHumano.can_gestioncompletasgi or not gru.solo_proceso and proceso == colaborador.proceso %}
                                                                                                             {% if not perms.TalentoHumano.can_gestioncompletasgi %}
@@ -202,11 +202,9 @@
             </div>
         </div>
     </div>
-    <div class="modal fade" tabindex="-1" id="cargar" role="dialog">
+    <div class="modal fade" tabindex="-1" id="cargar" role="dialog"></div>
     <div class="modal fade" tabindex="-1" id="detalle_cadena_aprobacion" role="dialog"></div>
-    <div class="modal fade" tabindex="-1" id="modal_prueba" role="dialog"></div>
 
-    </div>
     {% include 'Administracion/_elements/_modal_confirmar_eliminar.html' %}
 {% endblock main%}
 
