--- a/Financiero/templates/Financiero/FlujoCaja/SubtipoMovimiento/index.html
+++ b/Financiero/templates/Financiero/FlujoCaja/SubtipoMovimiento/index.html
@@ -1,7 +1,7 @@
 {% extends 'Financiero/_common/base_financiero.html' %}
 {% load static %}
 {% load humanize %}
-<title>{% block titulo %}Sub-Tipos de Movimientos{% endblock %}</title>
+<title>{% block titulo %}Subtipos de Movimientos{% endblock %}</title>
 {% block styles %}
     <link rel="stylesheet" media="screen, print" href="{% static 'EVA/Plantilla/css/datagrid/datatables/datatables.bundle.css' %}">
     <link rel="stylesheet" media="screen, print" href="{% static 'EVA/Plantilla/css/formplugins/select2/select2.bundle.css' %}">
@@ -14,7 +14,7 @@
     <div class="panel-container show">
         <div class="header">
              <h1 class="header-title">
-                <i class='far fa-file-alt'></i> Sub-Tipos de Movimientos <span class='fw-300'></span>
+                <i class='far fa-file-alt'></i> Subtipos de Movimientos <span class='fw-300'></span>
                  <br>
                  <br>
              </h1>
