--- a/Financiero/templates/Financiero/FlujoCaja/SubtipoMovimiento/index.html
+++ b/Financiero/templates/Financiero/FlujoCaja/SubtipoMovimiento/index.html
@@ -62,10 +62,18 @@
                                                             {% if perms.Financiero.change_subtipomovimiento or perms.Financiero.delete_subtipomovimiento %}
                                                             <td>
                                                                 {% if perms.Financiero.change_subtipomovimiento %}
-                                                                <a class="far fa-2x fa-edit" href="javascript:abrirModalCrearEditarSubtipoMovimiento('{% url 'Financiero:subtipo-movimiento-editar' sub_mov.id %}')" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Editar"></a>
+                                                                    {% if sub_mov.protegido %}
+                                                                        <a class="far fa-2x fa-edit" {% if perms.TalentoHumano.can_access_usuarioespecial %} href="javascript:abrirModalCrearEditarSubtipoMovimiento('{% url 'Financiero:subtipo-movimiento-editar' sub_mov.id %}')" {% else %}style="color: grey" {% endif %} data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Editar"></a>
+                                                                    {% else %}
+                                                                        <a class="far fa-2x fa-edit" href="javascript:abrirModalCrearEditarSubtipoMovimiento('{% url 'Financiero:subtipo-movimiento-editar' sub_mov.id %}')" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Editar"></a>
+                                                                    {% endif %}
                                                                 {% endif %}
                                                                 {% if perms.Financiero.delete_subtipomovimiento %}
-                                                                <a class="far fa-2x fa-trash-alt color-danger-900" id="eliminar_{{ sub_mov.id }}" href="javascript:void(0);"  onclick="fConfirmarEliminar({{ sub_mov.id }})" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Eliminar"></a>
+                                                                    {% if sub_mov.protegido %}
+                                                                        <a class="far fa-2x fa-trash-alt color-danger-900" id="eliminar_{{ sub_mov.id }}" {% if perms.TalentoHumano.can_access_usuarioespecial %} href="javascript:void(0);"  onclick="fConfirmarEliminar({{ sub_mov.id }})" {% else %}style="color: grey"{% endif %} data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Eliminar"></a>
+                                                                    {% else %}
+                                                                        <a class="far fa-2x fa-trash-alt color-danger-900" id="eliminar_{{ sub_mov.id }}" href="javascript:void(0);"  onclick="fConfirmarEliminar({{ sub_mov.id }})" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Eliminar"></a>
+                                                                    {% endif %}
                                                                 {% endif %}
                                                             </td>
                                                             {% endif %}
