--- a/Financiero/templates/Financiero/FlujoCaja/FlujoCajaContratos/index.html
+++ b/Financiero/templates/Financiero/FlujoCaja/FlujoCajaContratos/index.html
@@ -38,7 +38,7 @@
                                                         <th>Fecha de terminación</th>
                                                         <th>Valor</th>
                                                         <th>Tipo de contrato</th>
-                                                        <th>Acción</th>
+                                                        <th>Ver Flujo de Caja</th>
                                                     </tr>
                                                 </thead>
                                                 <tbody>
